google form & whitespace fixing

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -2,8 +2,8 @@
 
 #About {
     // border: 2px solid #000;
-    min-height: 70vh;
-    padding-top: 2rem;
+    // min-height: 70vh;
+    padding-top: 1rem;
     // padding-bottom: 3rem;
     display: flex;
     justify-content: center;
@@ -58,7 +58,7 @@
 @media only screen and (min-width: 768px) {
     #About {
         // border: 2px solid #000;
-        padding-top: 2rem;
+        padding-top: 1rem;
         padding-bottom: 3rem;
     
         .About-wrapper {
