--- a/src/components/Work/Work.scss
+++ b/src/components/Work/Work.scss
@@ -1,7 +1,7 @@
 @import '../../config';
 
 #Work {
-    padding-top: 15vh;
+    padding-top: 3rem;
 
     .Work-wrapper {
         h2 {
@@ -12,7 +12,7 @@
         }
 
         .work-cnt {
-            margin-top: 2rem;
+            margin-top: 1rem;
 
             .work-item {
                 width: 85%;
@@ -182,7 +182,7 @@
 
 @media only screen and (min-width: 992px) {
     #Work {
-
+        padding-top: 4rem;
         .Work-wrapper {
             max-width: 1100px;
             margin: 0 auto;
